# MshIO

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: build.yml  pip.yml
cmake/: Catch2.cmake  nanobind.cmake  pybind11.cmake  python.cmake  sanitizer-cmake.cmake
data/: test.msh  test_2.2_ascii.msh  test_2.2_bin.msh  test_4.1_bin.msh
examples/: msh_inspect.cpp
include/MshIO/: MshSpec.h  MshSpecExt.h  element_utils.h  exception.h  io_utils.h  load_msh.h  load_msh_data.h  load_msh_elements.h  load_msh_format.h  load_msh_nodes.h  mshio.h  save_msh.h  save_msh_data.h  save_msh_elements.h  save_msh_format.h  save_msh_nodes.h  validate_spec.h
include/mshio/: MshSpec.h  mshio.h
python/: pymshio.cpp
python/mshio/: __init__.py
src/: element_utils.cpp  element_utils.h  io_utils.cpp  io_utils.h  load_msh.cpp  load_msh_curves.cpp  load_msh_curves.h  load_msh_data.cpp  load_msh_data.h  load_msh_elements.cpp  load_msh_elements.h  load_msh_entities.cpp  load_msh_entities.h  load_msh_format.cpp  load_msh_format.h  load_msh_nanospline_format.h  load_msh_nodes.cpp  load_msh_nodes.h  load_msh_patches.cpp  load_msh_patches.h  load_msh_physical_groups.cpp  load_msh_physical_groups.h  load_msh_post_process.cpp  load_msh_post_process.h  save_msh.cpp  save_msh_curves.cpp  save_msh_curves.h  save_msh_data.cpp  save_msh_data.h  save_msh_elements.cpp  save_msh_elements.h  save_msh_entities.cpp  save_msh_entities.h  save_msh_format.cpp  save_msh_format.h  save_msh_nanospline_format.h  save_msh_nodes.cpp  save_msh_nodes.h  save_msh_patches.cpp  save_msh_patches.h  (+3 more)
src/binding/: python.cpp
tests/: test_data.h  test_io.cpp  test_io.py  test_loader.cpp
