[build-system]
requires = [
    "scikit-build-core==0.9.8",
]
build-backend = "scikit_build_core.build"

[project]
name = "mshio"
maintainers = [{name = "Qingnan Zhou", email = "qnzhou@gmail.com"}]
description = "A tiny C++ library to read/write ASCII/binary MSH format files."
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
license = { file = "LICENSE" }

dependencies = [
    "numpy>=1.25",
]
urls.repository = "https://github.com/qnzhou/MshIO"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "python/mshio/__init__.py"
